--- a/contacto.html
+++ b/contacto.html
@@ -6,14 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Turismo Extremo Sur</title>
-  
+
   <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css>
   <link rel="stylesheet" href="CSS/estilos.css">
   <link rel="stylesheet" href="FONTS/font_handler.css">
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous">
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
   </script>
 </head>
 
@@ -39,61 +38,61 @@
           <li class="nav-item">
             <a class="nav-link active" href="contacto.html">Contáctanos</a>
           </li>
-
         </ul>
       </div>
     </div>
   </nav>
-<!--formulario-->
-<h2 class="text-center mt-5">Contactanos</h2>
 
-
-<div class="row justify-content-center mb-5" >
-  <div class="col-lg-8 col-xl-6">
-    <form id="contactForm">
-      <div class="form-floating mb-3">
-        <input class="form-control" id="name" type="text" placeholder="Enter your name..." pattern="[A-Za-z\s]+" title="Only letters and spaces are allowed" minlength="3" maxlength="20" required />
-        <label for="name">Nombre</label>
-        <div class="invalid-feedback">Por favor introduzca un nombre.</div>
-      </div>
-      <div class="form-floating mb-3">
-        <input class="form-control" id="lastname" type="text" placeholder="Enter your lastname..." pattern="[A-Za-z\s]+" title="Only letters and spaces are allowed" minlength="3" maxlength="20" required />
-        <label for="name">Apellido</label>
-        <div class="invalid-feedback">Por favor introduzca un apellido.</div>
-      </div>
-      <div class="form-floating mb-3">
-        <input class="form-control" id="email" type="email" placeholder="name@example.com" required />
-        <label for="email">Email </label>
-        <div class="invalid-feedback">Por favor introduzca un Email valido.</div>
-      </div>
-      <div class="form-floating mb-3">
-        <input class="form-control" id="phone" type="tel" placeholder="955552222" pattern="[0-9]+" title="955552222" minlength="9" maxlength="9" required />
-        <label for="phone">Telefono</label>
-        <div class="invalid-feedback">Introduzca un numero de Telefono.</div>
-      </div>
-      <div class="form-floating mb-3">
-        <textarea class="form-control" id="message" placeholder="Enter your message here..." maxlength="1000" style="height: 10rem" required></textarea>
-        <label for="message">Mensaje</label>
-        <div class="invalid-feedback">Por favor introduzxca su mensaje.</div>
-      </div>
-      <div class="d-none" id="submitSuccessMessage">
-        <div class="text-center mb-3">
-          <div class="fw-bolder">Mensaje enviado!</div> 
+  <!--formulario-->
+  <h2 class="text-center mt-5">Contactanos</h2>
+  <div class="row justify-content-center mb-5">
+    <div class="col-lg-8 col-xl-6">
+      <form id="contactForm">
+        <div class="form-floating mb-3">
+          <input class="form-control" id="name" type="text" placeholder="Enter your name..." pattern="[A-Za-z\s]+"
+            title="Only letters and spaces are allowed" minlength="3" maxlength="20" required />
+          <label for="name">Nombre</label>
+          <div class="invalid-feedback">Por favor introduzca un nombre.</div>
         </div>
-      </div>
-      <div class="d-none" id="submitErrorMessage">
-        <div class="text-center text-danger mb-3">Error enviando el mensaje!</div>
-      </div>
-      <div class="d-grid">
-        <p class="warning-error" id="warning-error"></p>
-        <button class="btn btn-primary btn-lg" id="submitButton" type="submit">Enviar</button>
-      </div>
-    </form>
-    <script src="JS/valida.js"></script>
+        <div class="form-floating mb-3">
+          <input class="form-control" id="lastname" type="text" placeholder="Enter your lastname..."
+            pattern="[A-Za-z\s]+" title="Only letters and spaces are allowed" minlength="3" maxlength="20" required />
+          <label for="name">Apellido</label>
+          <div class="invalid-feedback">Por favor introduzca un apellido.</div>
+        </div>
+        <div class="form-floating mb-3">
+          <input class="form-control" id="email" type="email" placeholder="name@example.com" required />
+          <label for="email">Email </label>
+          <div class="invalid-feedback">Por favor introduzca un Email valido.</div>
+        </div>
+        <div class="form-floating mb-3">
+          <input class="form-control" id="phone" type="tel" placeholder="955552222" pattern="[0-9]+" title="955552222"
+            minlength="9" maxlength="9" required />
+          <label for="phone">Telefono</label>
+          <div class="invalid-feedback">Introduzca un numero de Telefono.</div>
+        </div>
+        <div class="form-floating mb-3">
+          <textarea class="form-control" id="message" placeholder="Enter your message here..." maxlength="1000"
+            style="height: 10rem" required></textarea>
+          <label for="message">Mensaje</label>
+          <div class="invalid-feedback">Por favor introduzxca su mensaje.</div>
+        </div>
+        <div class="d-none" id="submitSuccessMessage">
+          <div class="text-center mb-3">
+            <div class="fw-bolder">Mensaje enviado!</div>
+          </div>
+        </div>
+        <div class="d-none" id="submitErrorMessage">
+          <div class="text-center text-danger mb-3">Error enviando el mensaje!</div>
+        </div>
+        <div class="d-grid">
+          <p class="warning-error" id="warning-error"></p>
+          <button class="btn btn-primary btn-lg" id="submitButton" type="submit">Enviar</button>
+        </div>
+      </form>
+      <script src="JS/valida.js"></script>
+    </div>
   </div>
-</div>
-
-
 </body>
 
 <footer class="bg-dark py-4 mt-auto">
