--- a/elCliema.html
+++ b/elCliema.html
@@ -4,16 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <title>Turismo Extremo Sur</title>
-  
+
   <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css>
   <link rel="stylesheet" href="CSS/estilos.css">
   <link rel="stylesheet" href="FONTS/font_handler.css">
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous">
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
   </script>
 </head>
 
@@ -39,7 +38,6 @@
           <li class="nav-item">
             <a class="nav-link active" href="contacto.html">Contáctanos</a>
           </li>
-
         </ul>
       </div>
     </div>
@@ -47,6 +45,7 @@
 
   <h2 class="text-center mt-5">Consulta el clima</h2>
   <!--Aqui cuerpo del calendario o lo que pongas-->
+  
 </body>
 
 <footer class="bg-dark py-4 mt-auto">
