--- a/escalada.html
+++ b/escalada.html
@@ -13,8 +13,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-    </script>
-
   </script>
 
   <!--calendario-->
@@ -45,16 +43,11 @@
             <a class="nav-link active" href="contacto.html">Contáctanos</a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
       </div>
     </div>
   </nav>
 
   <h2 class="text-center mt-5">Escalada Extrema</h2>
-
   <div class="card text-bg-dark mb-5">
     <img src="Imagenes/escaladaGrupo.jpeg" class="card-img" alt="Img Escalada" style="filter: brightness(0.75);">
     <div class="card-img-overlay">
@@ -64,18 +57,19 @@
       <p class="card-text"><small>Last updated 3 mins ago</small></p>
     </div>
   </div>
+</body>
 
-  <footer class="bg-dark py-4 mt-auto">
-    <div class="container px-5">
-      <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-        <div class="col-auto">
-          <div class="small m-0 text-white">Página para Programación Web</div>
-        </div>
-        <div class="col-auto">
-          <div class="small m-0 text-white">Turismo Extremo © 2024</div>
-        </div>
+<footer class="bg-dark py-4 mt-auto">
+  <div class="container px-5">
+    <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+      <div class="col-auto">
+        <div class="small m-0 text-white">Página para Programación Web</div>
+      </div>
+      <div class="col-auto">
+        <div class="small m-0 text-white">Turismo Extremo © 2024</div>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
 
 </html>
