--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Turismo Extremo Sur</title>
-  
+
   <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css>
   <link rel="stylesheet" href="CSS/estilos.css">
   <link rel="stylesheet" href="FONTS/font_handler.css">
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous">
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
   </script>
 </head>
 
@@ -44,20 +43,17 @@
     </div>
   </nav>
 
-  
-<div class="card text-bg-dark mb-5">
-  <img src="Imagenes/bannerIndex.png" class="card-img" alt="bannerIndex" style="filter: brightness(0.5);">
-  <div class="card-img-overlay">
-    <h3 class="card-title">Turismo Extremo</h3>
-    <p class="card-text">Somos una pequeña empresa dedicada a dar una experiencia de calidad. <br>En nuestro ADN corre la adrenalina. Si quieres vivir grandes aventuras y de una manera segura
-    ven con sotros!! <br> te estaremos esperando!! esto es Turismo Extremo. </p>
-    <p class="card-text"><small>Navega en una balsa o realiza escalada en grupo y siente la adrenalina de viajar. <br> Nuestros expertos te ayudaran en todo momento para brindar una experiancia unica.</small></p>
+  <div class="card text-bg-dark mb-5">
+    <img src="Imagenes/bannerIndex.png" class="card-img" alt="bannerIndex" style="filter: brightness(0.5);">
+    <div class="card-img-overlay">
+      <h3 class="card-title">Turismo Extremo</h3>
+      <p class="card-text">Somos una pequeña empresa dedicada a dar una experiencia de calidad. <br>En nuestro ADN corre
+        la adrenalina. Si quieres vivir grandes aventuras y de una manera segura
+        ven con sotros!! <br> te estaremos esperando!! esto es Turismo Extremo. </p>
+      <p class="card-text"><small>Navega en una balsa o realiza escalada en grupo y siente la adrenalina de viajar. <br>
+          Nuestros expertos te ayudaran en todo momento para brindar una experiancia unica.</small></p>
+    </div>
   </div>
-</div>
-
-
-
-
 </body>
 
 <footer class="bg-dark py-4 mt-auto">
