--- a/nueServicios.html
+++ b/nueServicios.html
@@ -6,14 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Turismo Extremo Sur</title>
-  
+
   <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css>
   <link rel="stylesheet" href="CSS/estilos.css">
   <link rel="stylesheet" href="FONTS/font_handler.css">
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous">
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
   </script>
 </head>
 
@@ -44,36 +43,37 @@
     </div>
   </nav>
 
-<h2 class="text-center mt-5">Nuestros servicios</h2>
-<div class="container d-flex justify-content-center mt-5">
-  <div class="card mx-3" style="width: 18rem;">
-    <img src="Imagenes/escalada.webp" class="card-img-top" alt="Escalada">
-    <div class="card-body" style="min-height: 125px; max-height: 200px;">
-      <h5 class="card-title">Escalada Extrema</h5>
-      <p class="card-text">Maravillosas salidas de expedición por montañas o acantilados con guía especializado.</p>
+  <h2 class="text-center mt-5">Nuestros servicios</h2>
+  <div class="container d-flex justify-content-center mt-5">
+    <div class="card mx-3" style="width: 18rem;">
+      <img src="Imagenes/escalada.webp" class="card-img-top" alt="Escalada">
+      <div class="card-body" style="min-height: 125px; max-height: 200px;">
+        <h5 class="card-title">Escalada Extrema</h5>
+        <p class="card-text">Maravillosas salidas de expedición por montañas o acantilados con guía especializado.</p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Valor $40.000 por persona.</li>
+      </ul>
+      <div class="card-body">
+        <a href="escalada.html" class="card-link">Mas Detalles</a>
+      </div>
     </div>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">Valor $40.000 por persona.</li>
-    </ul>
-    <div class="card-body">
-      <a href="escalada.html" class="card-link">Mas Detalles</a>
-    </div>
-  </div>
 
-  <div class="card mx-3" style="width: 18rem;">
-    <img src="Imagenes/rafting.jpg" class="card-img-top" alt="Rafting">
-    <div class="card-body" style="min-height: 125px; max-height: 200px;">
-      <h5 class="card-title">Rafting Extremo</h5>
-      <p class="card-text">Viaja por torrentosos rápidos en una balsa de hasta 10 personas.</p>
-    </div>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">Valor $20.000 por persona.</li>
-    </ul>
-    <div class="card-body">
-      <a href="rafting.html" class="card-link">Mas Detalles</a>
+    <div class="card mx-3" style="width: 18rem;">
+      <img src="Imagenes/rafting.jpg" class="card-img-top" alt="Rafting">
+      <div class="card-body" style="min-height: 125px; max-height: 200px;">
+        <h5 class="card-title">Rafting Extremo</h5>
+        <p class="card-text">Viaja por torrentosos rápidos en una balsa de hasta 10 personas.</p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Valor $20.000 por persona.</li>
+      </ul>
+      <div class="card-body">
+        <a href="rafting.html" class="card-link">Mas Detalles</a>
+      </div>
     </div>
   </div>
-</div>
+</body>
 
 <footer class="bg-dark py-4 mt-auto">
   <div class="container px-5">
