--- a/quienSomos.html
+++ b/quienSomos.html
@@ -12,8 +12,7 @@
   <link rel="stylesheet" href="FONTS/font_handler.css">
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous">
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
   </script>
 </head>
 
@@ -41,7 +40,6 @@
           <li class="nav-item">
             <a class="nav-link active" href="contacto.html">Contáctanos</a>
           </li>
-
         </ul>
       </div>
     </div>
@@ -63,8 +61,8 @@
             <p class="card-text">Diseñador Web</p>
             <p class="small mb-2">Descripción de Francisco</p>
             <div class="d-flex justify-content-center align-items-center">
-              <a href="https://wa.me/qr/QR_CODE_HERE" target="_blank" class="social-icon"><img src="Imagenes/WhatsApp_icon.png" alt="Whatsapp"
-                  style="max-width: 25px;" class="img-fluid"></a>
+              <a href="https://wa.me/qr/QR_CODE_HERE" target="_blank" class="social-icon"><img
+                  src="Imagenes/WhatsApp_icon.png" alt="Whatsapp" style="max-width: 25px;" class="img-fluid"></a>
               <a href="#" target="_blank" class="social-icon"><img src="Imagenes/Instagram_icon.png" alt="Instagram"
                   style="max-width: 25px;" class="img-fluid"></a>
             </div>
@@ -83,10 +81,10 @@
             <p class="card-text">Diseñador Web</p>
             <p class="small mb-2">Descripción de Itamar</p>
             <div class="d-flex justify-content-center align-items-center">
-              <a href="https://wa.me/qr/6P4GJGHWFKHPL1" target="_blank" class="social-icon"><img src="Imagenes/WhatsApp_icon.png" alt="Whatsapp"
-                  style="max-width: 25px;" class="img-fluid"></a>
-              <a href="https://www.instagram.com/system.calix/" target="_blank" class="social-icon"><img src="Imagenes/Instagram_icon.png" alt="Instagram"
-                  style="max-width: 25px;" class="img-fluid"></a>
+              <a href="https://wa.me/qr/6P4GJGHWFKHPL1" target="_blank" class="social-icon"><img
+                  src="Imagenes/WhatsApp_icon.png" alt="Whatsapp" style="max-width: 25px;" class="img-fluid"></a>
+              <a href="https://www.instagram.com/system.calix/" target="_blank" class="social-icon"><img
+                  src="Imagenes/Instagram_icon.png" alt="Instagram" style="max-width: 25px;" class="img-fluid"></a>
             </div>
           </div>
         </div>
@@ -101,7 +99,8 @@
       <span class="visually-hidden">Next</span>
     </button>
     <div class="carousel-indicators" style="position: relative;">
-      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
     </div>
   </div>
