--- a/rafting.html
+++ b/rafting.html
@@ -6,14 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Turismo Extremo Sur</title>
-  
+
   <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css>
   <link rel="stylesheet" href="CSS/estilos.css">
   <link rel="stylesheet" href="FONTS/font_handler.css">
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous">
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
   </script>
 </head>
 
@@ -48,19 +47,15 @@
     </div>
   </nav>
 
-<h2 class="text-center mt-5">Rafting Extremo</h2>
-
-
-
-<div class="card text-bg-dark mb-4">
+  <h2 class="text-center mt-5">Rafting Extremo</h2>
+  <div class="card text-bg-dark mb-4">
     <img src="Imagenes/raftinggrupo.jpeg" class="card-img" alt="raftinggrupo" style="filter: brightness(0.75);">
     <div class="card-img-overlay">
       <h5 class="card-title">Escalada Extrema</h5>
       <p class="card-text">Escala en grupo o en solitario guiado por uno de nuestros instructores expertos.</p>
-      </div>
+    </div>
   </div>
-
-
+</body>
 
 <footer class="bg-dark py-4 mt-auto">
   <div class="container px-5">
